2006-04-26  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c (update_shadow): 
	Remove comment that is no longer valid.

	* plugins/move.c: Support for maximized windows snap-off. Based on
	patch by Colin Guthrie.

	* plugins/rotate.c (rotateHandleEvent): Don't do edge flipping
	when a horizontally maximized or fullscreen window is grabbed.

	* plugins/zoom.c:
	* plugins/rotate.c:
	* plugins/resize.c:
	* plugins/move.c:
	* src/screen.c:
	* include/compiz.h: Add warpPointerToScreenPos and use it everywhere
	we want to invisibly warp the pointer.

2006-04-25  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c:
	* plugins/decoration.c: Add clamp and min size.

	* plugins/decoration.c (decorReleaseDecoration): Fix memory leak.

	* plugins/scale.c: Click on background leaves scale mode and enters
	show desktop mode. (Dan Winship)

	* plugins/minimize.c (minHandleEvent): Initialize scale and
	translate properly.

	* src/window.c (activateWindow):
	* src/event.c (handleEvent):
	* src/screen.c: Add window parameter to leaveShowDesktopMode and
	use this function for making one window leave show desktop mode.
	Fixes so that we're leaving show desktop mode when no windows
	are longer hidden.

	* plugins/scale.c (scaleSetScreenOption): Add missing break statement.

	* plugins/rotate.c (rotateInitScreen): Initialize rotateHandle.

	* src/paint.c (paintScreen): Only paint windows that have been 
	damaged.

2006-04-24  Dan Winship  <danw@novell.com>

	* plugins/scale.c: 
	* plugins/switcher.c: clarify the "initiate" descriptions

	* plugins/compiz.schemas: regen

2006-04-24  David Reveman  <davidr@novell.com>

	* src/paint.c (paintScreen): Always call paintWindow when window
	is visible. Fixes so that window animations (fade, minimize...) aren't
	paused when if window becomes invisible.
	(paintWindow): Return early if region is empty.

	* plugins/switcher.c: Use hideWindow and showWindow so that the